--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,9 @@ before_script:
   - android-wait-for-emulator
   - adb shell settings put global window_animation_scale 0 &
   - adb shell settings put global transition animation_scale 0 &
-  - adb shell settings put global animator_duration_scale 0 &
+  - adb shell settings put global animator_duration_scale 0
   # Set up Code Climate test reporter
-  - adb shell input keyevent 4
-  - adb shell input tap 300 250
+  - adb shell input keyevent 82
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
