--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
         vectorDrawables.useSupportLibrary = true
         multiDexEnabled true
+        // The following argument makes the Android Test Orchestrator run its
+        // "pm clear" command after each test invocation. This command ensures
+        // that the app's state is completely cleared between tests.
+        testInstrumentationRunnerArguments clearPackageData: 'true'
     }
 
     // This enables long timeouts required on slow environments, e.g. Travis
@@ -43,6 +47,7 @@ android {
     productFlavors {
     }
     testOptions {
+        execution 'ANDROID_TEST_ORCHESTRATOR'
         unitTests.returnDefaultValues = true
     }
     compileOptions {
@@ -105,6 +110,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
     androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestUtil 'com.android.support.test:orchestrator:1.0.1'
 
     androidTestImplementation ('com.android.support.test.espresso:espresso-contrib:3.0.2'){
         exclude group: 'com.android.support', module: 'appcompat'
